[package]
name = "lms_hss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
rand = "0.8.5"
proptest = "1.1.0"

[dev-dependencies]
# these are needed for the cavp tests
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.dev]
opt-level=1

[profile.release]
opt-level=3
